# Cake

./: .dev  .gitignore  Cargo.toml  Main.hx  Main.old.hx  README.md  css.txt  engine.txt  haxelib.json  khafile.js  project.xml  scene.txt
assets/: scene.xml  window.xml
cake/engine/: Camera.hx  Component.hx  Entity.hx  Input.hx  KeyCode.hx  Math.hx  Matrix4x4.hx  Screen.hx  Shader.hx  Time.hx  Transform.hx
cake_derive/: Cargo.toml
cake_derive/src/: lib.rs
shaders/: simple.frag.glsl  simple.vert.glsl
source/: IncludeMacro.hx  Macros.hx  Main.hx
source/cake/editor/: Hierarchy.hx  Window.hx
source/cake/engine/: Behaviour.hx  Camera.hx  Canvas.hx  CanvasElement.hx  Collider.hx  Color.hx  Component.hx  Element.hx  Entity.hx  Gradient.hx  Graphic.hx  GraphicRenderer.hx  Image.hx  Matrix3.hx  Mesh.hx  MeshRenderer.hx  Raycastable.hx  ReadOnlyArray.hx  RectTransform.hx  SVG.hx  Scene.hx  Screen.hx  Sprite.hx  System.hx  TestSystem.hx  TextRenderer.hx  Texture.hx  Time.hx  Transform.hx  Vector2.hx  Vector3.hx  Vector4.hx
source/cake/engine/old/: Camera.hx.old  Canvas.hx.old  CanvasElement.hx.old  Input.hx.old
src/: entity.rs  lib.rs  matrix4.rs  scene.rs  system.rs  time.rs  vector2.rs  vector3.rs
src/shaders/: compile.cmd  default.frag  default.frag.spirv  default.vert.spirv
