[package]
name = "cake"
version = "0.1.0"
authors = ["jgrajewsky <jgrajewsky@gmail.com>"]
edition = "2018"

[features]
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
num-traits = "0.2.12"
cake_derive = { path = "cake_derive" }
gfx-hal = "0.5"
gfx-backend-gl = { version = "0.5", optional = true }
gfx-backend-empty = "0.5"
winit = { version = "0.22.2", features = ["web-sys"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.63"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.40"
features = [ "console", "Document", "Element", "HtmlElement", "Node", "Window" ]

[dependencies.gfx-backend-vulkan]
version = "0.5"
features = ["x11"]
optional = true

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
version = "0.5"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
version = "0.5"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.5"
optional = true